[gd_scene load_steps=6 format=3 uid="uid://cqsw57jh87au3"]

[ext_resource type="Script" uid="uid://dg7t8hssp7dsu" path="res://scripts/block.gd" id="1_8r6n6"]
[ext_resource type="ArrayMesh" uid="uid://clvo5jyc18uh3" path="res://models/meshes/stone.res" id="2_cgrg5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8r6n6"]
radius = 2.75

[sub_resource type="BoxShape3D" id="BoxShape3D_8r6n6"]
size = Vector3(1, 1.05054, 1.02234)

[sub_resource type="BoxShape3D" id="BoxShape3D_cgrg5"]
size = Vector3(2.5, 2.5, 2.5)

[node name="Block" type="StaticBody3D"]
script = ExtResource("1_8r6n6")

[node name="radius" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="radius"]
shape = SubResource("SphereShape3D_8r6n6")

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(0.000892968, 0.00406121, 2.97238, -0.00413271, 2.97237, -0.00405996, -2.97238, -0.00413147, 0.000898678, 0, 1.48853, 0)
billboard = 1
text = "5/5"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = ExtResource("2_cgrg5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0252678, 0.0111694)
shape = SubResource("BoxShape3D_8r6n6")
debug_fill = false

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.892462, 0)

[node name="collisionClick" type="Area3D" parent="."]
input_capture_on_drag = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="collisionClick"]
shape = SubResource("BoxShape3D_cgrg5")
debug_color = Color(1, 0, 0.4, 1)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="body_entered" from="radius" to="." method="_on_radius_body_entered"]
[connection signal="body_exited" from="radius" to="." method="_on_radius_body_exited"]
[connection signal="input_event" from="collisionClick" to="." method="_on_collision_input_event"]
